--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -7,7 +7,8 @@
             class="bg-teal-50 hover:bg-teal-300 transition duration-200 border-l-4 border-teal-950 overflow-hidden flex flex-col group my-4 mx-auto w-[95%] md:w-[300px] z-20">
                 <div 
                 class="flex self-center border-l-4 border-teal-950 h-[550px] w-[1000px]">
-                    <img class="hover:contrast-125 transition duration-200 m-auto h-[550px]" src="{{style.banner}}"/>
+                    <img class="hover:contrast-125 transition duration-200 m-auto h-[550px]" 
+                    src='{{environment.API_URL}}/public/artworks/{{style.banner}}.jpg' />
                 </div>
                 <div 
                 class="border-b-4 border-teal-950 p-4 text-center w-[350px] md:w-[300px] h-fit">
